[package]
name = "blinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.0"
